--- a/public_html/newskeserwen.html
+++ b/public_html/newskeserwen.html
@@ -12,7 +12,8 @@
                
                 <h1>KESERWAN-LEBANON</h1>
                          <h4>2015-2016</h4>
-                   <img src="images.png" alt="keserwan" height="90" width="160" />
+                   <img src="sapin.jpg" alt="christmas" height="120" width="200" />
+                     <h2 id="more">Merry/christmas#keserwan</h2>>
             </div>
         <ul id="menu">
                 <li><a href="index.html" >Home</a></li>
@@ -43,6 +44,9 @@
            <li type="disc"> خطة أمنية لمراقبة المساجد والكنائس ايام الجمعة والاحاد</li>
        <li type="disc">أهالي العسكريين المخطوفين بانتظار استقلال منقوص.. وأحباء طال انتظارهم </li>
         </ul>
+             <div id="img1">
+               
+             </div>
         </div>
     </body>
 </html>
