--- a/public_html/hist&geo.html
+++ b/public_html/hist&geo.html
@@ -12,8 +12,8 @@
                
                 <h1>KESERWAN-LEBANON</h1>
                 <h4>2015-2016</h4>
-                 <img src="sapin.jpg" alt="christmas" height="120" width="200" />
-                  <h2 id="more">Merry/christmas#keserwan</h2>>
+                 <img src="redsapin.jpg" alt="christmas" height="120" width="200" />
+                  <h2 id="more">Merry/christmas#keserwan</h2>
             </div>
        <ul id="menu">
                 <li><a href="index.html" >Home</a></li>
@@ -23,7 +23,7 @@
                
             </ul>
               <div id="his">
-             <img src="gis.PNG" alt="keserwan" height="190" width="300" />
+             <img src="gis.PNG" alt="keserwan" height="200" width="300" />
              <h2>keserwen graphic for lebanon</h2>
              <img src="jeita.jpg" alt="keserwan" height="190" width="300" />
              <h2>grotto jeita</h2>
