--- a/public_html/index.html
+++ b/public_html/index.html
@@ -14,8 +14,8 @@
                 <h1>KESERWAN-LEBANON</h1>
                 
                 <h4>2015-2016</h4>
-                <img src="sapin.jpg" alt="christmas" height="120" width="200" />
-                <h2 id="more">Merry/christmas#keserwan</h2>>
+                <img src="redsapin.jpg" alt="christmas" height="150" width="250" />
+                <h2 id="more">Merry/christmas#keserwan</h2>
                 
             </div>
         <ul id="menu">
