projet-html-suite

--- a/public_html/hist&geo.html
+++ b/public_html/hist&geo.html
@@ -56,6 +56,13 @@ Ghazir, Keserwan
                <div id="img1">
                 
              </div>
+              <div id="sponcers2">
+                <b>Exemple of publicity</b>
+                <img src="BK.png" alt="burgerking" height="200" width="200"/> 
+                <img src="Alo.jpg" alt="Alo taxi" height="200" width="200"/>
+                <img src="kfc.jpg" alt="kfc" height="200" width="200"/>
+                <img src="homecity.png" alt="homecity" height="200" width="200"/>
+            </div>
          </div>
     </body>
 </html>
