--- a/public_html/newskeserwen.html
+++ b/public_html/newskeserwen.html
@@ -24,9 +24,9 @@
             </ul>
         <ul  id="news">
             <h1 id="title"> sport-news </h1>
-            <li type="disc">captain fady khatib signed to fujian china</li>
-            <li type="disc">tadamonzook signed with jad khalil, mazen mnaymne, mohamad ibrahim, karam mechref</li>
-            <li type="disc"> برشلونة يسحق الريال برباعية في القمة الإسبانية</li>
+            <li type="disc">basketball: Ehya zook signed with joey zaloum and charbel sokhen </li>
+            <li type="disc">basketball: tadamonzook signed with jad khalil, mazen mnaymne, mohamad ibrahim, karam mechref</li>
+            <li type="disc">basketball: LCU vs MUBS win 71-68 </li>
            
             <h1 id="title"> keserwan-news </h1>
             <li type="disc">apotre jounieh celebrates yubilee 75 years</li>
