continue project new javascript

--- a/public_html/newskeserwen.html
+++ b/public_html/newskeserwen.html
@@ -16,10 +16,19 @@
                      <h2 id="more">Merry/christmas#keserwan</h2>
             </div>
         <ul id="menu">
-                <li><a href="index.html" >Home</a></li>
+                <li><a href="index.html" onmouseover="this.style.
+                             backgroundColor = 'orangered'"
+             onmouseout="this.
+                             style.backgroundColor = 'black'">Home</a></li>
                 <li><a href="newskeserwen.html" id="selected">News</a></li>
-                <li><a href="hist&geo.html" title="history and geography">hist&geo</a></li>
-                <li><a href="events.html">Events</a></li>
+                <li><a href="hist&geo.html" title="history and geography" onmouseover="this.style.
+                             backgroundColor = 'orangered'"
+             onmouseout="this.
+                             style.backgroundColor = 'black'">hist&geo</a></li>
+                <li><a href="events.html" onmouseover="this.style.
+                             backgroundColor = 'orangered'"
+             onmouseout="this.
+                             style.backgroundColor = 'black'">Events</a></li>
                
             </ul>
         <ul  id="news">
