--- a/public_html/events.html
+++ b/public_html/events.html
@@ -17,9 +17,18 @@
                 <h2 id="more">Merry/christmas#keserwan</h2>
             </div>
        <ul id="menu">
-                <li><a href="index.html" >Home</a></li>
-                <li><a href="newskeserwen.html" >News</a></li>
-                <li><a href="hist&geo.html" title="history and geography" >hist&geo</a></li>
+                <li><a href="index.html" onmouseover="this.style.
+                             backgroundColor = 'orangered'"
+             onmouseout="this.
+                             style.backgroundColor = 'black'" >Home</a></li>
+                <li><a href="newskeserwen.html" onmouseover="this.style.
+                             backgroundColor = 'orangered'"
+             onmouseout="this.
+                             style.backgroundColor = 'black'">News</a></li>
+                <li><a href="hist&geo.html" title="history and geography" onmouseover="this.style.
+                             backgroundColor = 'orangered'"
+             onmouseout="this.
+                             style.backgroundColor = 'black'">hist&geo</a></li>
                 <li><a href="events.html" id="selected">Events</a></li>
                
             </ul>
