projet final jq+js+css

--- a/public_html/hist&geo.html
+++ b/public_html/hist&geo.html
@@ -31,8 +31,8 @@
                
                 <p id="p1" onmouseover="this.style.color='white'">KESERWAN-LEBANON</p>
                 <p id="p2" onmouseover="this.style.color='white'">2015-2016</p>
-                <a title="merry christmas"><img src="images/redsapin.jpg" alt="christmas" height="120" width="200" /></a>
-                  <h2 id="more">Merry/christmas#keserwan</h2>
+                <a title="happy new year"><img src="images/redsapin.jpg" alt="christmas" height="120" width="200" /></a>
+                  <h2 id="more">happy/newyear#keserwan</h2>
             </div>
        <ul id="menu">
                 <li><a href="index.html" onmouseover="this.style.
